fixed itinerary list spacing issue

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -438,7 +438,7 @@ a:visited {
     flex-wrap: wrap;
     left: 0;
     top: 0;
-    height: 75%;
+    max-height: 75%;
     overflow: hidden;
     overflow-y: scroll;
   }
